Web Inspector: Fix style in remote inspector classes https://bugs.webkit.org/show_bug.cgi?id=180545

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-12-07
Reviewed by Youenn Fablet.

Source/JavaScriptCore:

* inspector/remote/RemoteControllableTarget.h:
* inspector/remote/RemoteInspectionTarget.h:
* runtime/JSGlobalObjectDebuggable.h:

Source/WebCore:

* page/PageDebuggable.h:
* workers/service/context/ServiceWorkerDebuggable.h:

Canonical link: https://commits.webkit.org/196474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225654 268f45cc-cd09-0410-ab3c-d52691b4dbfc