Source/JavaScriptCore/runtime/JSGlobalObjectDebuggable.h
@@ -46,17 +46,17 @@ public:
     JSGlobalObjectDebuggable(JSGlobalObject&);
     ~JSGlobalObjectDebuggable() { }
 
-    Inspector::RemoteControllableTarget::Type type() const override { return Inspector::RemoteControllableTarget::Type::JavaScript; }
+    Inspector::RemoteControllableTarget::Type type() const final { return Inspector::RemoteControllableTarget::Type::JavaScript; }
 
-    String name() const override;
-    bool hasLocalDebugger() const override { return false; }
+    String name() const final;
+    bool hasLocalDebugger() const final { return false; }
 
-    void connect(Inspector::FrontendChannel*, bool isAutomaticConnection = false, bool immediatelyPause = false) override;
-    void disconnect(Inspector::FrontendChannel*) override;
-    void dispatchMessageFromRemote(const String& message) override;
+    void connect(Inspector::FrontendChannel*, bool isAutomaticConnection = false, bool immediatelyPause = false) final;
+    void disconnect(Inspector::FrontendChannel*) final;
+    void dispatchMessageFromRemote(const String& message) final;
 
-    bool automaticInspectionAllowed() const override { return true; }
-    void pauseWaitingForAutomaticInspection() override;
+    bool automaticInspectionAllowed() const final { return true; }
+    void pauseWaitingForAutomaticInspection() final;
 
 private:
     JSGlobalObject& m_globalObject;
